tests/NormalTests/paczka2/big_fuzzy/27150215.err
Error in line 4: WApew A795 40,7
Error in line 6: SUP7NdsX A535 38,9
Error in line 5: kp5WF A453 37,0
Error in line 7: WApew A72 63,2
Error in line 15: WApew A535 78,1
Error in line 17: yZS A795 99,6
Error in line 20: yZS A453 52,4
Error in line 21: A535 A453 6,7
Error in line 24: kp5WF A453 57,8
Error in line 23: A535 A795 56,9
Error in line 22: yZS A535 21,2
Error in line 45: IyKvvbO A453 24,3
Error in line 50: kp5WF A795 85,2
Error in line 49: IyKvvbO A795 22,6
Error in line 64: A535 A72 17,6
Error in line 78: IyKvvbO A535 53,1
Error in line 82: IyKvvbO A453 84,3
Error in line 85: AUyxmBZ5VEY A72 37,6
Error in line 83: IyKvvbO A72 75,0
Error in line 104: AUyxmBZ5VEY A72 209,4
Error in line 113: SUP7NdsX A453 69,4
Error in line 117: AUyxmBZ5VEY A453 23,3
Error in line 118: WApew A453 63,6
Error in line 129: A535 A453 33,0
Error in line 131: A535 A72 95,7
Error in line 120: IyKvvbO A72 82,2
Error in line 125: AUyxmBZ5VEY A795 187,0
Error in line 127: yZS A535 72,2
Error in line 141: yZS A795 37,5
Error in line 143: yZS A72 152,51
Error in line 140: AUyxmBZ5VEY A453 10,7
Error in line 138: IyKvvbO A453 41,8
Error in line 159: WApew A72 129,6
Error in line 142: yZS A72 66,4
Error in line 157: A535 A795 215,6
Error in line 163: yZS A453 1,4
Error in line 167: yZS A72 42,3
Error in line 164: A535 A72 37,5
Error in line 175: SUP7NdsX A535 44,6
Error in line 177: SUP7NdsX A795 74,8
Error in line 189: SUP7NdsX A72 6,6
Error in line 166: WApew A795 3,8
Error in line 178: AUyxmBZ5VEY A795 19,9
Error in line 198: AUyxmBZ5VEY A453 11,3
Error in line 208: yZS A535 59,4
Error in line 214: AUyxmBZ5VEY A535 60,40
Error in line 213: SUP7NdsX A795 63,1
Error in line 218: AUyxmBZ5VEY A535 88,8
Error in line 237: AUyxmBZ5VEY A453 53,9
Error in line 219: IyKvvbO A72 103,5
Error in line 240: AUyxmBZ5VEY A795 53,0
Error in line 230: WApew A453 27,0
